--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: anqi425784190
 on:
   push:
-    branches:    
+    branches:
       - main
 jobs:
   push:
@@ -23,8 +23,8 @@ jobs:
       - name: Commit and push if changed   # 将.md_sha1 README.md 更新到仓库
         run: |
           git diff
-          git config --global user.email "zhaoolee@gmail.com"
-          git config --global user.name "zhaoolee"
+          git config --global user.email "stellaliu483@gmail.com"
+          git config --global user.name "stellaliu"
           git add .md_sha1 README.md
           git commit -m "Github Action auto Updated"
           git push
