--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -7,11 +7,11 @@ jobs:
   push:
       runs-on: ubuntu-20.04
       steps:
-      - uses: actions/checkout@v2 # Checking out the repo
+      - uses: actions/checkout@v2  
       - name: Install dependecies
         uses: VaultVulp/action-pipenv@v2.0.1
         with:
-          command: install -d # Install all dependencies, including development ones
+          command: install -d  
       - name: Build
         env:
             USERNAME: ${{ secrets.USERNAME }}
