--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Commit and push if changed   # 将.md_sha1 README.md 更新到仓库
         run: |
           git diff
-          git config --global user.email "stellaliu483@gmail.com"
-          git config --global user.name "stellaliu"
+          git config --global user.email "1404154408@qq.com"
+          git config --global user.name "Stella2019"
           git add .md_sha1 README.md
           git commit -m "Github Action auto Updated"
           git push
